Wed Oct 23 12:49:02 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/misc.gel: fix naming of adj.  Call it Adjugate
	  rather then Adjoint to avoid confusion

Wed Oct 23 12:29:10 2002  George Lebl <jirka@5z.com>

	* src/parse.y, src/lexer.l, src/calc.[ch], src/funclib.c,
	  src/genius_lists.c, src/inter.c: remove the help function add a
	  help command, and add help on specific functions add help on commands.
	  Add possible argument to ls.  Remove the shell hack as it's
	  dangerous and just use glob if wordexp isn't available.  Also clean
	  up the command stuff.

	* src/funclib.c, src/matrixw.[ch]: add DiagonalOf function

Fri Oct 18 22:49:22 2002  George Lebl <jirka@5z.com>

	* src/calc.c: fix cd command, improve ls command

	* src/inter.c: fix command completition for cd and fix toplevel
	  command checking for the new commands

Fri Oct 18 18:28:33 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: add chdir

	* src/parse.y, src/lexer.l, src/calc.[ch]: add cd, pwd and ls
	  commands, currently broken

Fri Oct 18 17:31:27 2002  George Lebl <jirka@5z.com>

	* src/parse.y, src/lexer.l, src/eval.[ch], src/structs.h,
	  src/funclib.c, src/calc.c, src/dict.c: Add parameters (both user
	  and built in).  At some point they should also support value
	  verification/massage functions, but not so currently.

	* src/*.[ch]: warning fixes

	* lib/*/*.gel: minor cleanups and use parameters

Fri Oct 18 15:46:18 2002  George Lebl <jirka@5z.com>

	* src/eval.[ch], src/mpwrap.[ch], src/calc.c, src/parse.y,
	  src/lexer.l:  Add some element by element operators, add double
	  factorial operator

	* lib/linear_agebra/linear_algebra.gel: add some norm functions

	* lib/linear_agebra/misc.gel: add UpperTriangular and LowerTriangular
	  functions and IsVector function, and make some vector operations
	  work on both horizontal and vertical vectors

	* lib/combinatorics/factorial.gel: use !! for double factorial
	  function and add Factorial function
