@@ -111,7 +111,7 @@ function MatrixSumSquares(a) = (
 protect("MatrixSumSquares")
 
 #calculate the product of all elements in a matrix
-SetHelp("MatrixProduct","matrix", "Calculate the product of all elements in a matrix");
+SetHelp("MatrixProduct","matrix", "Calculate the product of all elements in a matrix")
 function MatrixProduct(a) = (
 	if(not IsMatrix(a) or not IsValueOnly(a)) then
 		(error("matprod: argument not a value only matrix");bailout);
@@ -119,12 +119,49 @@ function MatrixProduct(a) = (
 );
 protect("MatrixProduct")
 
-SetHelp("delrowcol", "matrix", "Remove column and row from a matrix");
-function delrowcol(m,row,col) = (
+SetHelp("Submatrix", "matrix", "Return column(s) and row(s) from a matrix")
+function Submatrix(m,r,c) = (
+	if not IsMatrix(m) or
+	   (not IsInteger(r) and not IsVector (r)) or
+	   (not IsInteger(c) and not IsVector (r)) then
+		(error("Submatrix: arguments are not the right type");bailout);
+	if not IsVector (r) then
+		r = [r];
+	if not IsVector (c) then
+		c = [c];
+	ret = SetMatrixSize ([0], elements (r), elements (c));
+	for i=1 to elements(r) do
+		for j=1 to elements(c) do
+			ret@(i,j) = m@(r@(i),c@(j));
+	ret
+)
+protect ("Submatrix")
+
+SetHelp ("IndexComplement", "matrix", "Return the index complement of a vector of indexes (must be sorted)")
+function IndexComplement (v, n) = (
+	if not IsVector(v) then
+		(error("IndexComplement: arguments are not the right type");bailout);
+	r = [0];
+	j=1;
+	k=1;
+	for i=1 to n do (
+		if j <= elements(v) and v@(j) == i then (
+			j = j+1
+		) else (
+			r@(k) = i;
+			k = k+1
+		)
+	);
+	r
+)
+protect ("IndexComplement")
+
+SetHelp("DeleteRowColumn", "matrix", "Remove column and row from a matrix");
+function DeleteRowColumn(m,row,col) = (
 	if(not IsMatrix(m) or not IsInteger(row) or not IsInteger(col)) then
-		(error("swaprow: arguments are not the right type");bailout)
+		(error("DeleteRowColumn: arguments are not the right type");bailout)
 	else if(row>rows(m) or col>columns(m)) then
-		(error("delrowcol: arguments out of range");bailout);
+		(error("DeleteRowColumn: arguments out of range");bailout);
 	if row==1 then (
 		if col==1 then
 			m@(2..rows(m),2..columns(m))
@@ -154,12 +191,21 @@ function delrowcol(m,row,col) = (
 			 m@(row+1..rows(m),col+1..columns(m))]
 	)
 );
-protect("delrowcol")
+protect("DeleteRowColumn")
+
+SetHelp("ComplementSubmatrix", "matrix", "Remove column(s) and row(s) from a matrix");
+function ComplementSubmatrix(m,r,c) = (
+	if IsInteger(r) and IsInteger(c) then
+		DeleteRowColumn (m, r, c)
+	else
+		Submatrix (m, IndexComplement (r, rows(m)), IndexComplement (c, columns(m)))
+)
+protect ("ComplementSubmatrix")
 
 # Minor of a matrix (determinant of a submatrix given by deleting
 # one row and one column)
-# FIXME: allow k x k minors, arbitrary submatrices, etc.
-function Minor(M,i,j)=det(delrowcol(M,i,j))
+SetHelp("Minor","linear_algebra", "Get the i-j minor of a matrix")
+function Minor(M,i,j) = det (ComplementSubmatrix (M, i, j))
 protect("Minor");
 
 #classical adjoint (adjugate) of a matrix
