@@ -1,3 +1,10 @@
+Wed Oct 23 13:41:49 2002  George Lebl <jirka@5z.com>
+
+	* lib/linear_algebra/*.gel: add some help strings and implement
+	  submatrix functions
+
+	* src/mpwrap.c: define 0^0 as 1
+
 Wed Oct 23 12:49:02 2002  George Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/misc.gel: fix naming of adj.  Call it Adjugate
